inou/prp/tests/errors/wire_undriven.prp
/*
:name: wire_undriven
:type: error
:error: never driven
*/

// 2c-wire — an undriven wire (declared with `= nil`, never assigned) is a
// compile error: a `wire` must have exactly one driver.
comb t(a:u8) -> (o:u8) {
  wire w = nil   // locate_error_here
  o = w + 1
}
